--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,6 +1,3 @@
-/*---------------------------
-Navigation Bar
-----------------------------*/
 #navbar li:hover ul {
   display: block;
 
@@ -11,14 +8,11 @@ Navigation Bar
   position: fixed;
   background-color: #000;
   border: 1px solid #000;
-  font-weight: 500;
-  font-size: 2em;
-  font-family: "Comic Sans MS", cursive, sans-serif;
-  height: px;
+  font: bold 30px Sans-serif;
+  height: 70px;
   width: 1400px;
-  margin: 0;
-  padding-left: 20px;
-  margin-top: 0;
+  margin: 0px auto;
+  padding-left: 10px;
 }
 #navbar ul {
   margin: 0px;
@@ -62,37 +56,5 @@ Navigation Bar
   background: #000;
 }
 #navbar a:active {
-  font-size: 1em;
-}
-.hide {
-	display: none;
-}
-#top {
-	padding-top: 80px;
-}
-/*---------------------------
-Gallery Page
-----------------------------*/
-body {
-	width: 90%;
-	text-align: center;
-	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-}
-div > div {
-    background-color: #fff;
-    width: 32%;
- 	float: left;
- 	border: 1px solid black;
-}
-.images {
-	padding-left: 10%;
-}
-li {
-	list-style-type: none;
-}
-img {
-	border-radius: 100%
-}
-div > h1 {
-	padding-top: 40px;
+  font-size: 2em;
 }
